--- a/ScorePredict/notebooks/WeeklyPlots.ipynb
+++ b/ScorePredict/notebooks/WeeklyPlots.ipynb
@@ -142,9 +142,7 @@
   {
    "cell_type": "markdown",
    "id": "73fed1e9-43f1-4054-b7e9-5edb549e33e7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Creating DataFrame"
    ]
@@ -1809,7 +1807,7 @@
    "id": "4f99fde9-94f9-4bf8-b9f8-7c301b82f758",
    "metadata": {},
    "source": [
-    "## Striker ShotMaps"
+    "## ShotMap - Top 8 Players Based on Number oof Shots Across Top 5 Leagues"
    ]
   },
   {
@@ -1824,8 +1822,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 538,
    "id": "4cdb91e8-b86a-40f5-b82e-ac2048b4d441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"select player , count(*) as num_shots,\n",
+    "count(case when \"result\" = 'Goal' or \"result\" = 'SavedShot' or \"result\" = 'ShotOnPost' then 1 else null end) as num_shots_on_target,\n",
+    "count(case when \"result\" = 'Goal' then 1 else null end) as num_goals,\n",
+    "count(case when \"result\" = 'Goal' and situation != 'Penalty' then 1 else null end) as num_goals_non_penalty,\n",
+    "sum(round(\"xG\" :: numeric ,2)) as total_xG,\n",
+    "sum(case when situation != 'Penalty' then round(\"xG\" :: numeric ,2) else null end) as total_npxG\n",
+    "from understat_shots_tb ust\n",
+    "where season = '2024'\n",
+    "group by player\n",
+    "order by num_shots desc\n",
+    "limit 9;\"\"\"\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    df_stats = pd.read_sql(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
+   "id": "9daa012c-49d6-4632-bdf4-1ce1c0d1c2e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>num_shots</th>\n",
+       "      <th>num_shots_on_target</th>\n",
+       "      <th>num_goals</th>\n",
+       "      <th>num_goals_non_penalty</th>\n",
+       "      <th>total_xg</th>\n",
+       "      <th>total_npxg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Erling Haaland</td>\n",
+       "      <td>71</td>\n",
+       "      <td>40</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>13.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kylian Mbappe-Lottin</td>\n",
+       "      <td>69</td>\n",
+       "      <td>35</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12.43</td>\n",
+       "      <td>9.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antoine Semenyo</td>\n",
+       "      <td>64</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>6.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nikola Krstovic</td>\n",
+       "      <td>63</td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.51</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Omar Marmoush</td>\n",
+       "      <td>59</td>\n",
+       "      <td>31</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8.79</td>\n",
+       "      <td>7.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Robert Lewandowski</td>\n",
+       "      <td>59</td>\n",
+       "      <td>35</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16.85</td>\n",
+       "      <td>14.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cole Palmer</td>\n",
+       "      <td>57</td>\n",
+       "      <td>25</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9.03</td>\n",
+       "      <td>6.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Raphinha</td>\n",
+       "      <td>56</td>\n",
+       "      <td>27</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10.46</td>\n",
+       "      <td>9.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Valentín Castellanos</td>\n",
+       "      <td>55</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.26</td>\n",
+       "      <td>7.74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 player  num_shots  num_shots_on_target  num_goals  \\\n",
+       "0        Erling Haaland         71                   40         13   \n",
+       "1  Kylian Mbappe-Lottin         69                   35          9   \n",
+       "2       Antoine Semenyo         64                   18          4   \n",
+       "3       Nikola Krstovic         63                   21          4   \n",
+       "4         Omar Marmoush         59                   31         13   \n",
+       "5    Robert Lewandowski         59                   35         16   \n",
+       "6           Cole Palmer         57                   25         11   \n",
+       "7              Raphinha         56                   27         11   \n",
+       "8  Valentín Castellanos         55                   22          6   \n",
+       "\n",
+       "   num_goals_non_penalty  total_xg  total_npxg  \n",
+       "0                     12     14.63       13.87  \n",
+       "1                      6     12.43        9.47  \n",
+       "2                      4      6.25        6.25  \n",
+       "3                      3      6.51        4.99  \n",
+       "4                     11      8.79        7.27  \n",
+       "5                     14     16.85       14.63  \n",
+       "6                      8      9.03        6.75  \n",
+       "7                     10     10.46        9.72  \n",
+       "8                      5      9.26        7.74  "
+      ]
+     },
+     "execution_count": 539,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 540,
+   "id": "d05bc36e-a170-47a8-8cf7-20bbe741a74d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_shots = \"\"\" select \"result\",\"X\",\"Y\",situation,\"shotType\",player from understat_shots_tb ust\n",
+    "where season = '2024' and \n",
+    "player in (select player from\n",
+    "\n",
+    "(select player , count(*) as num_shots,\n",
+    "count(case when \"result\" = 'Goal' or \"result\" = 'SavedShot' or \"result\" = 'ShotOnPost' then 1 else null end) as num_shots_on_target,\n",
+    "count(case when \"result\" = 'Goal' then 1 else null end) as num_goals,\n",
+    "count(case when \"result\" = 'Goal' and situation != 'Penalty' then 1 else null end) as num_goals_non_penalty,\n",
+    "sum(round(\"xG\" :: numeric ,2)) as total_xG,\n",
+    "sum(case when situation != 'Penalty' then round(\"xG\" :: numeric ,2) else null end) as total_npxG\n",
+    "from understat_shots_tb ust\n",
+    "where season = '2024'\n",
+    "group by player\n",
+    "order by num_shots desc\n",
+    "limit 8) players);\"\"\"\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    df_shots = pd.read_sql(query_shots, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
+   "id": "515a9c1d-726f-4e00-88f2-51f6502ebd83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>result</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>situation</th>\n",
+       "      <th>shotType</th>\n",
+       "      <th>player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SavedShot</td>\n",
+       "      <td>0.857</td>\n",
+       "      <td>0.668</td>\n",
+       "      <td>OpenPlay</td>\n",
+       "      <td>LeftFoot</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SavedShot</td>\n",
+       "      <td>0.912</td>\n",
+       "      <td>0.428</td>\n",
+       "      <td>SetPiece</td>\n",
+       "      <td>LeftFoot</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MissedShots</td>\n",
+       "      <td>0.815</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>OpenPlay</td>\n",
+       "      <td>LeftFoot</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BlockedShot</td>\n",
+       "      <td>0.903</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>OpenPlay</td>\n",
+       "      <td>LeftFoot</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Goal</td>\n",
+       "      <td>0.807</td>\n",
+       "      <td>0.393</td>\n",
+       "      <td>SetPiece</td>\n",
+       "      <td>LeftFoot</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        result      X      Y situation  shotType       player\n",
+       "0    SavedShot  0.857  0.668  OpenPlay  LeftFoot  Cole Palmer\n",
+       "1    SavedShot  0.912  0.428  SetPiece  LeftFoot  Cole Palmer\n",
+       "2  MissedShots  0.815  0.490  OpenPlay  LeftFoot  Cole Palmer\n",
+       "3  BlockedShot  0.903  0.356  OpenPlay  LeftFoot  Cole Palmer\n",
+       "4         Goal  0.807  0.393  SetPiece  LeftFoot  Cole Palmer"
+      ]
+     },
+     "execution_count": 532,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_shots.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "183ea571-3778-4740-bcfa-1b469971bcbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1833,7 +2148,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9daa012c-49d6-4632-bdf4-1ce1c0d1c2e5",
+   "id": "787ff326-271f-4f4d-8e9e-3e3f0b3f76f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675a8d83-3b75-4552-9f16-bf64ed2e9cef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "457ed132-f800-4e49-b110-a3c033ac17d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a39cd9-52d8-4ceb-b177-45aa1b0240d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35dc261d-5bd9-4a10-a3af-9c38c0eaf89c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1841,18 +2188,22 @@
   {
    "cell_type": "markdown",
    "id": "76a51067-8f98-4b5c-a513-81d63dbd2dbc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Scatter Plots for Different Metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 526,
    "id": "c230d81b-e470-44e9-82dd-e0f87a819512",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://x.com/DataAnalyticEPL/status/1869757409042006186"
+   ]
   },
   {
    "cell_type": "code",
@@ -1873,7 +2224,9 @@
   {
    "cell_type": "markdown",
    "id": "92c7eb49-00f2-403a-9310-dc2b7369e037",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Radar / Pizza Plots"
    ]
