--- a/ScorePredict/notebooks/SeasonAnalysis.ipynb
+++ b/ScorePredict/notebooks/SeasonAnalysis.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "fcd40669-7c6e-4215-8d5e-3fffae7b313a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Importing Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "82e80073-3e08-48a1-ae5a-8999105e5ed4",
    "metadata": {},
    "outputs": [],
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "fa0ffa25-33ed-4051-a135-20a958bde250",
    "metadata": {},
    "outputs": [
@@ -90,9 +92,7 @@
   {
    "cell_type": "markdown",
    "id": "e75c50be-bcbc-453a-9127-8c2685809220",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Extracting Data"
    ]
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "94764a47-9cce-4dda-aa47-640949b9eb9b",
    "metadata": {},
    "outputs": [
@@ -115,14 +115,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events.csv\n"
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_14796\\1493488388.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfi = pd.read_csv(file)  # Read the CSV file\n"
      ]
     },
@@ -130,14 +130,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events2.csv\n"
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events10.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events11.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_14796\\1493488388.py:16: DtypeWarning: Columns (37,260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfi = pd.read_csv(file)  # Read the CSV file\n"
      ]
     },
@@ -145,14 +146,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events3.csv\n"
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events12.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events13.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events14.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events15.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_14796\\1493488388.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfi = pd.read_csv(file)  # Read the CSV file\n"
      ]
     },
@@ -160,14 +164,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events4.csv\n"
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events16.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_14796\\1493488388.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfi = pd.read_csv(file)  # Read the CSV file\n"
      ]
     },
@@ -175,15 +179,167 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events5.csv\n",
-      "D:/Scrape-Whoscored-Event-Data/data\\pl_events6.csv\n"
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events17.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_14796\\1493488388.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events18.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events19.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (37,260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events2.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (37,260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events20.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events21.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events22.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (37,260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events3.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events4.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events5.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events6.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events7.csv\n",
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events8.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfi = pd.read_csv(file)  # Read the CSV file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:/Scrape-Whoscored-Event-Data/data/pl\\pl_events9.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_17264\\3253483003.py:16: DtypeWarning: Columns (260) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfi = pd.read_csv(file)  # Read the CSV file\n"
      ]
     }
@@ -193,7 +349,7 @@
     "import os\n",
     "\n",
     "# Specify the directory containing the CSV files\n",
-    "folder_path = \"D:/Scrape-Whoscored-Event-Data/data\"\n",
+    "folder_path = \"D:/Scrape-Whoscored-Event-Data/data/pl/\"\n",
     "\n",
     "# Use glob to get all the CSV file paths\n",
     "csv_files = glob.glob(os.path.join(folder_path, \"*.csv\"))\n",
@@ -213,17 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "a8e3d70d-daae-4a2e-a230-4fba67640f08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "110"
+       "262"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d8ad6481-1d6a-498d-874f-f41114e6fef8",
    "metadata": {},
    "outputs": [],
@@ -3253,7 +3409,9 @@
   {
    "cell_type": "markdown",
    "id": "c2303b2f-85ab-4f77-b6b9-8adaf7ccf93f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Comparison Pizza Plots"
    ]
