--- a/ScorePredict/notebooks/ExpectedAssists.ipynb
+++ b/ScorePredict/notebooks/ExpectedAssists.ipynb
@@ -114,9 +114,7 @@
   {
    "cell_type": "markdown",
    "id": "3c557e0e-f642-4321-8d45-287eca2d1c4e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data Extraction"
    ]
@@ -124,9 +122,7 @@
   {
    "cell_type": "markdown",
    "id": "99536396-3012-4158-9608-d3c897e383ff",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### WhoScored"
    ]
@@ -901,9 +897,7 @@
   {
    "cell_type": "markdown",
    "id": "8e8c4337-b541-460d-ba93-6fa6dfe63753",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data Transformation"
    ]
@@ -911,9 +905,7 @@
   {
    "cell_type": "markdown",
    "id": "d09dece1-c531-4639-beec-f0e2f9ce922a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### WhoScored"
    ]
@@ -4459,8 +4451,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "cf2be371-8320-4879-bac9-1fac46a39c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Overperformers (Assists > xA):\n",
+      "           playerName  total_xA  total_assists  assist_diff\n",
+      "2352    Mohamed Salah     14.21             20         5.79\n",
+      "257   Andrej Kramaric      4.87              8         3.13\n",
+      "2806       Robin Hack      4.05              7         2.95\n",
+      "2526    Oliver Antman      8.11             11         2.89\n",
+      "978     Fabian Rieder      3.14              6         2.86\n",
+      "\n",
+      "Top 5 Underperformers (xA > Assists):\n",
+      "           playerName  total_xA  total_assists  assist_diff\n",
+      "598     Chris Fuhrich     5.710              2       -3.710\n",
+      "1680        Junya Ito     6.655              3       -3.655\n",
+      "47    Ademola Lookman     8.690              6       -2.690\n",
+      "1385    Jamal Musiala     7.560              5       -2.560\n",
+      "3190     Troy Parrott     4.490              2       -2.490\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by player\n",
+    "player_grouped = final_df.groupby('playerName').agg(\n",
+    "    total_xA=('expected_assist', 'sum'),\n",
+    "    total_assists=('assist', 'sum')  # Make sure 'assist' is boolean or 0/1\n",
+    ").reset_index()\n",
+    "\n",
+    "# Calculate difference: actual - expected\n",
+    "player_grouped['assist_diff'] = player_grouped['total_assists'] - player_grouped['total_xA']\n",
+    "\n",
+    "# Sort for overperformers\n",
+    "top_overperformers = player_grouped.sort_values('assist_diff', ascending=False).head(5)\n",
+    "\n",
+    "# Sort for underperformers\n",
+    "top_underperformers = player_grouped.sort_values('assist_diff', ascending=True).head(5)\n",
+    "\n",
+    "# Display both\n",
+    "print(\"Top 5 Overperformers (Assists > xA):\")\n",
+    "print(top_overperformers)\n",
+    "\n",
+    "print(\"\\nTop 5 Underperformers (xA > Assists):\")\n",
+    "print(top_underperformers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0544f342-4834-4528-9ad5-539e411dfaeb",
    "metadata": {},
    "outputs": [],
    "source": []
