--- a/ScorePredict/notebooks/PostMatchAnalysis.ipynb
+++ b/ScorePredict/notebooks/PostMatchAnalysis.ipynb
@@ -774,7 +774,9 @@
   {
    "cell_type": "markdown",
    "id": "e84f0cda-8df5-4a6a-bdb7-7bc07a9137c9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### WhoScored"
    ]
